--- a/bookinfo/platform/kube/bookinfo-ratings-v2-Compose.yaml
+++ b/bookinfo/platform/kube/bookinfo-ratings-v2-Compose.yaml
@@ -26,8 +26,8 @@ spec:
     spec:
       containers:
       - name: ratings
-        image: istio/examples-bookinfo-ratings-v2:1.9.0
-        imagePullPolicy: IfNotPresent
+        image: iwinoto/examples-bookinfo-ratings-v2:1.9.1
+        imagePullPolicy: Always
         env:
           # ratings-v2 will use mongodb as the default db backend.
           # if you would like to use mysqldb then set DB_TYPE = 'mysql', set
