--- a/bookinfo/platform/kube/bookinfo-ratings-v2-mysql-vm.yaml
+++ b/bookinfo/platform/kube/bookinfo-ratings-v2-mysql-vm.yaml
@@ -26,8 +26,8 @@ spec:
     spec:
       containers:
       - name: ratings
-        image: istio/examples-bookinfo-ratings-v2:1.9.0
-        imagePullPolicy: IfNotPresent
+        image: iwinoto/examples-bookinfo-ratings-v2:1.9.1
+        imagePullPolicy: Always
         env:
           # This assumes you registered your mysql vm as
           # istioctl register -n vm mysqldb 1.2.3.4 3306
